--- a/DaVenti/DaVenti.csproj
+++ b/DaVenti/DaVenti.csproj
@@ -130,6 +130,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\BookController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PromoController.cs" />
     <Compile Include="Global.asax.cs">
@@ -249,6 +250,10 @@
     <Content Include="Views\Promo\Details.cshtml" />
     <Content Include="Views\Promo\Delete.cshtml" />
     <Content Include="Views\Shared\_Landing.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Category\Create.cshtml" />
+    <Content Include="Views\Category\Edit.cshtml" />
+    <Content Include="Views\Category\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
